--- a/main/index.html
+++ b/main/index.html
@@ -2,9 +2,15 @@
 <html>
 
 <head>
+    <title>Polymer App</title>
+    <meta name="viewport"
+          content="width=device-width, minimum-scale=1.0, initial-scale=1.0, user-scalable=yes">
+
     <script src="../bower_components/platform/platform.js"></script>
-    <link rel="import" href="components/core-elements/core-elements.html">
-    <link rel="import" href="components/paper-elements/paper-elements.html">
+    <link rel="import" href="../bower_components/font-roboto/roboto.html">
+    <link rel="import" href="../bower_components/core-elements/core-elements.html">
+    <link rel="import" href="../bower_components/paper-elements/paper-elements.html">
+
     <style>
         .pink paper-tab::shadow #ink {
         color: #ff4081;
@@ -14,7 +20,7 @@
         }
     </style>
 </head>
-<body>
+<body unresolved touch-action="auto">
 <paper-tabs selected="0">
     <paper-tab>TAB 1</paper-tab>
     <paper-tab>TAB 2</paper-tab>
