--- a/index.html
+++ b/index.html
@@ -8,30 +8,46 @@
 
     <script src="./bower_components/platform/platform.js"></script>
     <link rel="import" href="./bower_components/font-roboto/roboto.html">
-    <link rel="import" href="./bower_components/core-elements/core-elements.html">
-    <link rel="import" href="./bower_components/paper-elements/paper-elements.html">
     <link rel="import"
           href="./bower_components/core-header-panel/core-header-panel.html">
     <link rel="import"
           href="./bower_components/core-toolbar/core-toolbar.html">
     <link rel="import"
           href="./bower_components/paper-tabs/paper-tabs.html">
+    <style>
+        core-header-panel {
+        height: 100%;
+        overflow: auto;
+        -webkit-overflow-scrolling: touch;
+        }
+        core-toolbar {
+        background: #03a9f4;
+        color: white;
+        }
+        #tabs {
+        width: 100%;
+        margin: 0;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+        }
+    </style>
 </head>
 <body unresolved touch-action="auto">
 <core-header-panel>
 
     <core-toolbar>
-        <paper-tabs selected="0">
-
-            <paper-tab>TAB 1</paper-tab>
-            <paper-tab>TAB 2</paper-tab>
-            <paper-tab>TAB 3</paper-tab>
+        <paper-tabs id="tabs" valueattr="name" selected="all" self-end>
+            <paper-tab name="all">ALL</paper-tab>
+            <paper-tab name="favorites">FAVORITES</paper-tab>
         </paper-tabs>
     </core-toolbar>
 
     <!-- main page content will go here -->
+    <p>Test test</p>
 
 </core-header-panel>
 
-<p>Test test</p>
+
 </body>
