Testing to determine what addition fixed page

--- a/index.html
+++ b/index.html
@@ -15,12 +15,12 @@
     <link rel="import"
           href="./bower_components/paper-tabs/paper-tabs.html">
     <style>
-        html,body {
-        height: 100%;
-        margin: 0;
-        background-color: #E5E5E5;
-        font-family: 'RobotoDraft', sans-serif;
-        }
+        <!--html,body {-->
+        <!--height: 100%;-->
+        <!--margin: 0;-->
+        <!--background-color: #E5E5E5;-->
+        <!--font-family: 'RobotoDraft', sans-serif;-->
+        <!--}-->
         core-header-panel {
         height: 100%;
         overflow: auto;
