Apparently body styling was important for getting polymer to work

--- a/index.html
+++ b/index.html
@@ -15,12 +15,14 @@
     <link rel="import"
           href="./bower_components/paper-tabs/paper-tabs.html">
     <style>
-        <!--html,body {-->
-        <!--height: 100%;-->
-        <!--margin: 0;-->
-        <!--background-color: #E5E5E5;-->
-        <!--font-family: 'RobotoDraft', sans-serif;-->
-        <!--}-->
+        <!-- Important for getting polymer to work! -->
+        html,body {
+        height: 100%;
+        margin: 0;
+        background-color: #E5E5E5;
+        font-family: 'RobotoDraft', sans-serif;
+        }
+        <!-- END of important block -->
         core-header-panel {
         height: 100%;
         overflow: auto;
