Annotated the important style block for future reference

--- a/index.html
+++ b/index.html
@@ -14,15 +14,14 @@
           href="./bower_components/core-toolbar/core-toolbar.html">
     <link rel="import"
           href="./bower_components/paper-tabs/paper-tabs.html">
+    <!-- IMPORTANT html,body style block must be present for polymer to work -->
     <style>
-        <!-- Important for getting polymer to work! -->
         html,body {
         height: 100%;
         margin: 0;
         background-color: #E5E5E5;
         font-family: 'RobotoDraft', sans-serif;
         }
-        <!-- END of important block -->
         core-header-panel {
         height: 100%;
         overflow: auto;
