--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
           href="./bower_components/core-toolbar/core-toolbar.html">
     <link rel="import"
           href="./bower_components/paper-tabs/paper-tabs.html">
+    <link rel="import" href="content-card.html">
     <!-- IMPORTANT html,body style block must be present for polymer to work -->
     <style>
         html,body {
@@ -52,7 +53,13 @@
     </core-toolbar>
 
     <!-- main page content will go here -->
-    <p>Test test</p>
+    <!--<div class="card-header" layout horizontal center>-->
+        <content-card>
+            <img src="./assets/imgs/redSquare.png">
+            <h2>A. Developer</h2>
+            <p>Something really profound about code.</p>
+        </content-card>
+    <!--</div> -->
 
 </core-header-panel>
 
