--- a/index.html
+++ b/index.html
@@ -18,33 +18,40 @@
     <!-- IMPORTANT html,body style block must be present for polymer to work -->
     <style>
         html,body {
-            height: 100%;
-            margin: 0;
-            background-color: #E5E5E5;
-            font-family: 'RobotoDraft', sans-serif;
+        height: 100%;
+        margin: 0;
+        background-color: #E5E5E5;
+        font-family: 'RobotoDraft', sans-serif;
         }
         core-header-panel {
-            height: 100%;
-            overflow: auto;
-            -webkit-overflow-scrolling: touch;
+        height: 100%;
+        overflow: auto;
+        -webkit-overflow-scrolling: touch;
         }
-            core-toolbar {
-            background: #03a9f4;
-            color: white;
+        core-toolbar {
+        background: #03a9f4;
+        color: white;
         }
         #tabs {
-            width: 100%;
-            margin: 0;
-            -webkit-user-select: none;
-            -moz-user-select: none;
-            -ms-user-select: none;
-            user-select: none;
+        width: 100%;
+        margin: 0;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
         }
         .container {
-            width: 80%;
-            margin: 50px auto;
+        width: 80%;
+        margin: 50px auto;
         }
-
+        @media (min-width: 481px) {
+        #tabs {
+        width: 200px;
+        }
+        .container {
+        width: 400px;
+        }
+        }
     </style>
 </head>
 <body unresolved touch-action="auto">
@@ -60,9 +67,8 @@
     <!-- main page content will go here -->
     <div class="container" layout vertical center>
         <content-card>
-
-            <h2>A. Developer</h2>
             <img src="./assets/imgs/redSquare.png">
+            <h2>A. Developer</h2>
             <p>Something really profound about code.</p>
         </content-card>
     </div>
