--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         }
         @media (min-width: 481px) {
         #tabs {
-        width: 200px;
+        width: 100%;
         }
         .container {
         width: 400px;
