Fixed syntax error in javascript

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
             break; //leave the loop
         }
       }
-      if (e.detail.isSelected())
+      if (e.detail.isSelected)
         console.log("Selected: " + tabs.selected);
     });
   </script>
