--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 <script>
     var tabs = document.querySelector('paper-tabs');
     tabs.addEventListener('core-select', function(e) {
-
+      if (e.detail.isSelected)
       console.log("Selected: " + tabs.selected);
     });
   </script>
