--- a/post-service.html
+++ b/post-service.html
@@ -56,7 +56,7 @@
         </style>
         <core-ajax id="ajax"
                    auto
-                   url="../api/posts.json"
+                   url="./testing/posts.json"
                    on-core-response="{{postsLoaded}}"
                    handleAs="json">
         </core-ajax>
