Typo in styling

--- a/post-list.html
+++ b/post-list.html
@@ -9,7 +9,7 @@
             display: block;
             width: 100%;
             }
-            post-card {
+            content-card {
             margin-bottom: 30px;
             }
         </style>
