--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
           href="./bower_components/core-toolbar/core-toolbar.html">
     <link rel="import"
           href="./bower_components/paper-tabs/paper-tabs.html">
-    <link rel="import" href="post-list.html">
+    <link rel="import" href="content-wrapper.html">
     <style>
         html,body {
         height: 100%;
@@ -55,21 +55,29 @@
 <body unresolved touch-action="auto">
 <core-header-panel>
     <core-toolbar>
-        <paper-tabs id="tabs" selected="all" self-end>
-            <paper-tab name="all">ALL</paper-tab>
-            <paper-tab name="favorites">FAVORITES</paper-tab>
+        <paper-tabs id="tabs" selected="green" self-end>
+            <paper-tab name="green">GREEN</paper-tab>
+            <paper-tab name="red">RED</paper-tab>
         </paper-tabs>
     </core-toolbar>
 
     <div class="container" layout vertical center>
-        <post-list show="all"></post-list>
+        <post-list color="greenCircle.png"></post-list>
     </div>
 </core-header-panel>
 
 <script>
     var tabs = document.querySelector('paper-tabs');
+    var card = document.querySelector('post-list');
     tabs.addEventListener('core-select', function() {
-      console.log("Selected: " + tabs.selected);
+      if (e.detail.isSelected) {
+        console.log("Selected: " + tabs.selected);
+        color = '';
+        if (tabs.selected === 'green')
+            color = 'greenCircle.png';
+        else
+            color = 'redCircle.png';
+      }
     });
   </script>
 </body>
