--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <link rel="import"
           href="./bower_components/paper-tabs/paper-tabs.html">
     <link rel="import" href="content-wrapper.html">
+    <link rel="import" href="post-list.html">
     <style>
         html,body {
         height: 100%;
@@ -60,10 +61,15 @@
             <paper-tab name="red">RED</paper-tab>
         </paper-tabs>
     </core-toolbar>
-
-    <div class="container" layout vertical center>
-        <content-wrapper color="greenCircle.png"></content-wrapper>
+    <div class="box" layout horizontal center>
+        <div class="container" layout vertical center>
+            <content-wrapper color="greenCircle.png"></content-wrapper>
+        </div>
+        <div class="container" layout vertical center>
+            <post-list show="all"></post-list>
+        </div>
     </div>
+
 </core-header-panel>
 
 <script>
