--- a/content-card.html
+++ b/content-card.html
@@ -1,10 +1,11 @@
 <link rel="import" href="./bower_components/polymer/polymer.html">
 <link rel="import" href="./bower_components/core-icon-button/core-icon-button.html">
 <link rel="import" href="./bower_components/paper-fab/paper-fab.html">
+<link rel="import" href="./bower_components/core-icons/core-icons.html">
 
 <polymer-element name="content-card">
     <template>
-        <style>
+        <style type="text/css">
             :host {
             display: block;
             position: relative;
@@ -46,7 +47,7 @@
         </div>
         <div class="options" layout horizontal right>
             <content></content>
-            <paper-fab label="mButton" class="mini"></paper-fab>
+            <paper-fab name="mButton" class="mini" icon="settings-power"></paper-fab>
         </div>
 
     </template>
