Trying to fix button styling

--- a/content-card.html
+++ b/content-card.html
@@ -30,7 +30,7 @@
             border-radius: 50%;
             margin: 10px;
             }
-            #mButton{
+            paper-fab {
                 background: #111122;
             }
             #mButton:hover {
@@ -47,7 +47,7 @@
         </div>
         <div class="options" layout horizontal right>
             <content></content>
-            <paper-fab name="mButton" class="mini" icon="settings-power"></paper-fab>
+            <paper-fab id="mButton" icon="settings-power"></paper-fab>
         </div>
 
     </template>
