Changed Color icon to be a button that changes color

--- a/content-card.html
+++ b/content-card.html
@@ -31,23 +31,26 @@
             margin: 10px;
             }
             paper-fab {
-                background: #111122;
+                background: #00FF00;
             }
             #mButton:hover {
-                background: #2a56c6;
+                background: #00AA00;
             }
             #mButton::shadow #ripple {
-                color: #2a56c6;
+                color: #004400;
+            }
+            core-icon[icon="settings-power"] {
+                fill:   #000
             }
 
         </style>
         <div class="card-header" layout horizontal center>
-            <content select="img"></content>
+            <paper-fab id="mButton" icon="settings-power"></paper-fab>
             <content select="h2"></content>
         </div>
         <div class="options" layout horizontal right>
             <content></content>
-            <paper-fab id="mButton" icon="settings-power"></paper-fab>
+
         </div>
 
     </template>
