Applied CSS styling

--- a/content-card.html
+++ b/content-card.html
@@ -31,13 +31,16 @@
             margin: 10px;
             }
             paper-fab {
-                background: #00FF00;
+                background: #00CC00;
+                width: 70px;
+                border-radius: 50%;
+                margin: 10px;
             }
             #mButton:hover {
-                background: #00AA00;
+                background: #00FF00;
             }
             #mButton::shadow #ripple {
-                color: #004400;
+                color: #00AA00;
             }
             core-icon[icon="settings-power"] {
                 fill:   #000
