--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
           href="./bower_components/core-toolbar/core-toolbar.html">
     <link rel="import"
           href="./bower_components/paper-tabs/paper-tabs.html">
-    <link rel="import" href="content-wrapper.html">
+    <link rel="import" href="server-info.html">
     <link rel="import" href="post-list.html">
     <style>
         html,body {
@@ -59,7 +59,7 @@
         </paper-tabs>
     </core-toolbar>
     <div class="container" layout vertical center>
-        <content-wrapper color="greenCircle.png"></content-wrapper>
+        <server-info show="yes"></server-info>
     </div>
 
 </core-header-panel>
