Trying to get second card in server-info to show up

--- a/index.html
+++ b/index.html
@@ -74,9 +74,9 @@
       if (e.detail.isSelected) {
         console.log("Selected: " + tabs.selected);
         if (tabs.selected === 'green')
-            card.color = 'greenCircle.png';
+            //card.color = 'greenCircle.png';
         else
-            card.color = 'redCircle.png';
+            //card.color = 'redCircle.png';
       }
     });
   </script>
