--- a/server-info.html
+++ b/server-info.html
@@ -19,13 +19,13 @@
         <div layout vertical center>
             <template>
                 <content-card>
-                    hidden?={{show == 'yes'}}
+                    hidden?={{show == 'no'}}
                     <img src="./assets/imgs/greenCircle.png" height="70" width="70">
                     <h2>Server Information</h2>
                     <p>Current status of the server</p>
                 </content-card>
                 <content-card>
-                    <paper-fab id="mButton" icon="power-settings"></paper-fab>
+                    <paper-fab icon="power-settings"></paper-fab>
                     <h2>Server Information</h2>
                     <p>Current status of the server</p>
                 </content-card>
