Using content-card directly instead of going through the server-info wrapper

--- a/index.html
+++ b/index.html
@@ -58,11 +58,11 @@
         </paper-tabs>
     </core-toolbar>
     <div class="container" layout vertical center>
-        <content-card show="yes">
-		<img src="./assets/imgs/greenCircle.png" width=70 height=70>
-		<h2>Server Info</h2>
-		<p>Server Stuff</p>
-	</content-card>
+        <server-info show="yes">
+		    <img src="./assets/imgs/greenCircle.png" width=70 height=70>
+		    <h2>Server Info</h2>
+		    <p>Server Stuff</p>
+	    </server-info>
     </div>
 
 </core-header-panel>
