--- a/content-card.html
+++ b/content-card.html
@@ -3,7 +3,7 @@
 <link rel="import" href="./bower_components/paper-fab/paper-fab.html">
 <link rel="import" href="./bower_components/core-icons/core-icons.html">
 
-<polymer-element name="content-card" attributes="show">
+<polymer-element name="content-card">
     <template>
         <style type="text/css">
             :host {
