--- a/index.html
+++ b/index.html
@@ -58,11 +58,7 @@
         </paper-tabs>
     </core-toolbar>
     <div class="container" layout vertical center>
-        <server-info show="yes">
-		    <img src="./assets/imgs/greenCircle.png" width=70 height=70>
-		    <h2>Server Info</h2>
-		    <p>Server Stuff</p>
-	    </server-info>
+        <server-info show="yes"></server-info>
     </div>
 
 </core-header-panel>
