Attempting to fix content cards not showing up

--- a/index.html
+++ b/index.html
@@ -70,9 +70,9 @@
     tabs.addEventListener('core-select', function(e) {
       if (e.detail.isSelected) {
         console.log("Selected: " + tabs.selected);
-        if (tabs.selected === 'green')
+        //if (tabs.selected === 'green')
             //card.color = 'greenCircle.png';
-        else
+        //else
             //card.color = 'redCircle.png';
       }
     });
