--- a/server-info.html
+++ b/server-info.html
@@ -17,16 +17,19 @@
         </style>
 
         <div layout vertical center>
-            <content-card>
-                hidden?={{show == 'no'}}
+            <content-card
+                hidden?="{{show != 'info'}}">
+
                 <img src="./assets/imgs/greenCircle.png" height="70" width="70">
                 <h2>Server Information</h2>
                 <p>Current status of the server</p>
             </content-card>
-            <content-card>
-                <paper-fab icon="power-settings"></paper-fab>
-                <h2>Server Information</h2>
-                <p>Current status of the server</p>
+            <content-card
+                    hidden?="{{show != 'admin'}}">
+                <paper-fab><core-icon icon="settings-power"></core-icon></paper-fab>
+                <h2>Admin Card</h2>
+                <p>Stuf the admin needs to know</p>
+                <p>More stuff the admin needs to know</p>
             </content-card>
         </div>
     </template>
