Attempting to get icon to showup

--- a/content-card.html
+++ b/content-card.html
@@ -37,6 +37,7 @@
             height: 70px;
             border-radius: 50%;
             margin: 10px;
+            icon: "settings-power";
             }
             polyfill-next-selector { content: '.card-header paper-fab:hover'; }
             .card-header ::content paper-fab:hover {
