--- a/server-info.html
+++ b/server-info.html
@@ -25,8 +25,7 @@
                 <p>Current status of the server</p>
             </content-card>
             <content-card
-                    hidden?="{{show != 'admin'}}">
-                <paper-fab><core-icon icon="settings-power"></core-icon></paper-fab>
+                    hidden?="{{show != 'admin'}}" button="true">
                 <h2>Admin Card</h2>
                 <p>Stuf the admin needs to know</p>
                 <p>More stuff the admin needs to know</p>
