--- a/server-info.html
+++ b/server-info.html
@@ -19,7 +19,6 @@
         <div layout vertical center>
             <content-card
                 hidden?="{{show != 'info'}}">
-
                 <img src="./assets/imgs/greenCircle.png" height="70" width="70">
                 <h2>Server Information</h2>
                 <p>Current status of the server</p>
@@ -27,7 +26,7 @@
             <content-card
                     hidden?="{{show != 'admin'}}" button="true">
                 <h2>Admin Card</h2>
-                <p>Stuf the admin needs to know</p>
+                <p>Stuff the admin needs to know</p>
                 <p>More stuff the admin needs to know</p>
             </content-card>
         </div>
