Attempting to fix icon position.

--- a/content-card.html
+++ b/content-card.html
@@ -32,8 +32,8 @@
             }
             #mButton {
                 background: #00EE00;
-                width: 70px;
-                height: 70px;
+                //width: 70px;
+                //height: 70px;
                 border-radius: 50%;
                 margin: 10px;
             }
@@ -54,7 +54,7 @@
             <content select="img"></content>
             <content select="h2"></content>
         </div>
-        <div class="options" layout horizontal right>
+        <div class="options" layout vertical right>
             <content></content>
             <content></content>
         </div>
