--- a/server-info.html
+++ b/server-info.html
@@ -16,6 +16,8 @@
             }
         </style>
 
+        <ajax-test id="axTest" posts="{{posts}}"></ajax-test>
+
         <div layout vertical center>
             <content-card
                 hidden?="{{show != 'info'}}">
