Debugging ajax call

--- a/ajax-test.html
+++ b/ajax-test.html
@@ -28,6 +28,7 @@
     postsLoaded: function() {
       // Make a copy of the loaded data
       this.posts = this.$.ajax.response.slice(0);
+      console.log('Message received');
       for (i = 0; i < this.posts.length; i++)
         console.log('Ret Val: ' + this.posts[i];
     },
