--- a/server-info.html
+++ b/server-info.html
@@ -3,6 +3,7 @@
 <link rel="import" href="./bower_components/core-icon-button/core-icon-button.html">
 <link rel="import" href="./bower_components/paper-fab/paper-fab.html">
 <link rel="import" href="./bower_components/core-icons/core-icons.html">
+<link rel="import" href="ajax-test.html">
 
 <polymer-element name="server-info" attributes="color img show">
     <template>
