Fixed script syntax

--- a/ajax-test.html
+++ b/ajax-test.html
@@ -30,7 +30,7 @@
       this.posts = this.$.ajax.response.slice(0);
       console.log('Message received');
       for (i = 0; i < this.posts.length; i++)
-        console.log('Ret Val: ' + this.posts[i];
+        console.log('Ret Val: ' + this.posts[i]);
     },
     /** 
      * Update the service with the current favorite value.
