Manually defined GET method

--- a/ajax-test.html
+++ b/ajax-test.html
@@ -15,6 +15,7 @@
         <core-ajax id="ajax"
                    auto
                    params='{"test":"This is a test"}'
+                   method="GET"
                    url="./testing/test-perl.pl"
                    on-core-response="{{postsLoaded}}"
                    handleAs="json">
