Attempting to manually launch ajax

--- a/ajax-test.html
+++ b/ajax-test.html
@@ -26,7 +26,8 @@
   Polymer('post-service', {
     created: function() {
       this.posts = [];
-      ajax.$.go; //Hopefully launches the ajax request
+      var ajax = document.querySelector('core-ajax');
+      ajax.go(); //Hopefully launches the ajax request
     },
     postsLoaded: function() {
       // Make a copy of the loaded data
@@ -37,7 +38,7 @@
     },
     response: function() {
         console.log('An error occurred in the AJAX request');
-    }
+    },
     /** 
      * Update the service with the current favorite value.
      * (Two-way data binding updates the favorite value 
