--- a/ajax-test.html
+++ b/ajax-test.html
@@ -25,6 +25,7 @@
     <script>
   Polymer('post-service', {
     created: function() {
+      console.log("Created ajax-test");
       this.posts = [];
       var ajax = document.querySelector('core-ajax');
       ajax.go(); //Hopefully launches the ajax request
