Testing shadow DOM

--- a/ajax-test.html
+++ b/ajax-test.html
@@ -23,6 +23,7 @@
         </core-ajax>
     </template>
     <script>
+    console.log("Test message from shadow dom");
   Polymer('post-service', {
     created: function() {
       console.log("Created ajax-test");
