Named polymer function creator incorrectly

--- a/ajax-test.html
+++ b/ajax-test.html
@@ -24,7 +24,7 @@
     </template>
     <script>
     console.log("Test message from shadow dom");
-  Polymer('post-service', {
+  Polymer('ajax-test', {
     created: function() {
       console.log("Created ajax-test");
       this.posts = [];
