Attempting to get AJAX to execute remote application instead of reading it's text

--- a/ajax-test.html
+++ b/ajax-test.html
@@ -15,7 +15,7 @@
         <core-ajax id="ajax"
                    auto
                    params='{"test":"This is a test"}'
-                   method="GET"
+                   method="POST"
                    url="./testing/test-perl.pl"
                    on-core-response="{{postsLoaded}}"
                    on-core-error="{{response}}"
