--- a/ajax-test.html
+++ b/ajax-test.html
@@ -16,7 +16,7 @@
                    auto
                    params='{"test":"This is a test"}'
                    method="POST"
-                   url="/usr/lib/cgi-bin/test-perl.cgi"
+                   url="/scripts/test-perl.cgi"
                    on-core-response="{{postsLoaded}}"
                    on-core-error="{{response}}"
                    handleAs="json">
