Added core-toolbar to index.html

--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
     <link rel="import" href="./bower_components/font-roboto/roboto.html">
     <link rel="import"
           href="./bower_components/core-header-panel/core-header-panel.html">
+    <link rel="import"
+          href="./bower_components/core-toolbar/core-toolbar.html">
 </head>
 <body unresolved touch-action="auto">
 <core-header-panel>
-    <div class="core-header">Tyan Tw1sted & Sethicis Hosting</div>
+    <core-toolbar class="core-header">Tyan Tw1sted & Sethicis Hosting</core-toolbar>
     <div class="content">TTNS Hosting's site is currently under construction.
     Please come back later.</div>
 </core-header-panel>
