--- a/index.html
+++ b/index.html
@@ -9,6 +9,40 @@
           href="./bower_components/core-header-panel/core-header-panel.html">
     <link rel="import"
           href="./bower_components/core-toolbar/core-toolbar.html">
+    <style>
+        html,body {
+        height: 100%;
+        margin: 0;
+        background-color: #E5E5E5;
+        font-family: 'RobotoDraft', sans-serif;
+        }
+        core-header-panel {
+        height: 100%;
+        overflow: auto;
+        -webkit-overflow-scrolling: touch;
+        }
+        core-toolbar {
+        background: #03a9f4;
+        color: white;
+        }
+        #tabs {
+        width: 100%;
+        margin: 0;
+        -webkit-user-select: none;
+        -moz-user-select: none;
+        -ms-user-select: none;
+        user-select: none;
+        }
+        .container {
+        width: 70%;
+        margin: 50px auto;
+        }
+        @media (min-width: 481px) {
+        #tabs {
+        width: 100%;
+        }
+        }
+    </style>
 </head>
 <body unresolved touch-action="auto">
 <core-header-panel>
