Added style code for header and associated divs

--- a/index.html
+++ b/index.html
@@ -21,6 +21,9 @@
         overflow: auto;
         -webkit-overflow-scrolling: touch;
         }
+        .core-header {
+            text-align: center;
+        }
         core-toolbar {
         background: #03a9f4;
         color: white;
@@ -46,9 +49,9 @@
 </head>
 <body unresolved touch-action="auto">
 <core-header-panel>
-    <core-toolbar class="core-header">Tyan Tw1sted & Sethicis Hosting</core-toolbar>
-    <div class="content">TTNS Hosting's site is currently under construction.
-    Please come back later.</div>
+    <core-toolbar><div class="core-header">classTyan Tw1sted & Sethicis Hosting</div></core-toolbar>
+    <div class="content"><p>TTNS Hosting's site is currently under construction.
+    Please come back later.</p></div>
 </core-header-panel>
 </body>
 </html>
