Added style code for header and associated divs

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 </head>
 <body unresolved touch-action="auto">
 <core-header-panel>
-    <core-toolbar><div class="core-header">classTyan Tw1sted & Sethicis Hosting</div></core-toolbar>
+    <core-toolbar center><div class="core-header">Tyan Tw1sted & Sethicis Hosting</div></core-toolbar>
     <div class="content"><p>TTNS Hosting's site is currently under construction.
     Please come back later.</p></div>
 </core-header-panel>
